--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,11 @@
 
 buildscript {
     repositories {
+        maven { url 'https://maven.google.com/' }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-
+        classpath 'com.android.tools.build:gradle:2.3.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,12 +14,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.google.com/' }
         jcenter()
-//        maven {
-//            url "https://jitpack.io"
-//            credentials { username authToken }
-//        }
-
     }
 }
 
