--- a/Spotlight-library/build.gradle
+++ b/Spotlight-library/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group = 'com.github.magneticflux-'
-
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
@@ -10,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 3
-        versionName "1.3.1"
+        versionCode 4
+        versionName "1.3.2"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -22,6 +20,9 @@ android {
         }
     }
 }
+
+group = 'com.github.magneticflux-'
+version = android.defaultConfig.versionName
 
 dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0'
